fix navigation on mobile

--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -31,3 +31,10 @@ thead th {
   float: left;
 }
 
+.m-l-t {
+  margin-top: 40px;
+}
+
+.m-x-t {
+  margin-top: 70px;
+}
